--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -142,3 +142,61 @@ height : 15vh;
 .msg{
   margin-top: 1rem;
 }
+
+@media screen and (max-width: 1000px){
+.hero{
+  display: none;
+}
+
+
+.login-form input{
+  font-size: 1rem;
+  width: 70vw;
+  height: 1.5rem;
+
+}
+
+.edit-note{
+  position: fixed;
+  top : 25vh;
+  width: 80vw;
+  border: 1px solid white;
+  padding-left: 5rem;
+  padding-top: 1rem;
+  padding-bottom: 2rem;
+  text-align: left;
+  background-color: #242424;
+
+}
+.edit-note input{
+  width: 90%;
+}
+
+.edit-note textarea{
+width  : 90%;
+height : 15vh;
+
+
+}
+.note{
+  border: 1px solid yellow;
+  margin: 0.5rem;
+  padding: 1rem;
+  width: 80vw;
+
+
+}
+
+.new input{
+  width: 75vw;
+  margin-left: 1rem;
+}
+
+.new textarea{
+  width: 60vh;
+  height: 60vw;
+  margin-left: 1rem;
+}
+
+
+}
