--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -53,18 +53,30 @@ h1{
 }
 
 .note{
+  position: relative;
+  top:5rem;
   border: 1px solid yellow;
-  margin: 0.5rem;
   padding: 1rem;
-  width: 45vw;
-
+  width: 40vw;
+  margin: 1rem;
 }
 .note:hover{
   background-color: rgba(255, 255, 255, 0.904);
   color: black;
 
 }
-
+.head{
+  position: fixed;
+  display: flex;
+  width: 100%;
+  top:0;
+  left: 0;
+  padding-bottom: 1rem;
+  justify-content: space-around;
+  height: 10vh;
+  background-color: rgb(71, 71, 71);
+  z-index: 1;
+}
 
 
 .delete{
@@ -182,8 +194,9 @@ height : 15vh;
 
 }
 .note{
+  position: relative;
+  top:5rem;
   border: 1px solid yellow;
-  margin: 0.5rem;
   padding: 1rem;
   width: 80vw;
 
