--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -2,7 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  
+
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -14,19 +14,18 @@
   -webkit-text-size-adjust: 100%;
 }
 
-body{
+body {
   margin-left: 5vw;
   margin-top: 5vw;
-
 }
 
-h1{
-  color : rgb(255, 196, 0);
+h1 {
+  color: rgb(255, 196, 0);
 }
 
-.green , .edit{
-  
-  background-color:rgb(255, 217, 0); 
+.green,
+.edit {
+  background-color: rgb(255, 217, 0);
   outline: none;
   border: none;
   margin-top: 2rem;
@@ -34,42 +33,43 @@ h1{
   color: black;
 }
 
-.edit:hover, .green:hover{
-  background-color:rgb(238, 255, 0); 
-  background-color: rgb(0, 156, 0);
-  color:white;
+.edit:hover,
+.green:hover {
+
+  background-color: rgb(255, 166, 0);
+  box-shadow: 0 0 10px 0 rgb(255, 212, 21);
+  color: white;
+}
+
+.new input {
+  width: 40vw;
+  margin-left: 1rem;
  
 }
 
-.new input{
-  width: 20vw;
-  margin-left: 1rem;
-}
-
-.new textarea{
-  width: 20vw;
+.new textarea {
+  width: 40vw;
   height: 20vw;
   margin-left: 1rem;
 }
 
-.note{
+.note {
   position: relative;
-  top:5rem;
+  top: 5rem;
   border: 1px solid yellow;
   padding: 1rem;
   width: 40vw;
   margin: 1rem;
 }
-.note:hover{
-  background-color: rgba(255, 255, 255, 0.904);
-  color: black;
-
+.note:hover {
+  box-shadow: 0 0 10px 0 rgb(255, 176, 5);
+ 
 }
-.head{
+.head {
   position: fixed;
   display: flex;
   width: 100%;
-  top:0;
+  top: 0;
   left: 0;
   padding-bottom: 1rem;
   justify-content: space-around;
@@ -78,10 +78,8 @@ h1{
   z-index: 1;
 }
 
-
-.delete{
-
-  background-color:rgb(255, 217, 0); 
+.delete {
+  background-color: rgb(255, 217, 0);
   outline: none;
   border: none;
   margin-top: 2rem;
@@ -90,20 +88,19 @@ h1{
   margin-left: 1rem;
 }
 
-.delete:hover{
-  background-color:  rgb(255, 53, 46);
-  color:white;
- 
+.delete:hover {
+  background-color: rgb(255, 53, 46);
+  box-shadow: 0 0 10px 0 rgb(255, 95, 21);
+  color: white;
 }
 
-.login-form input{
+.login-form input {
   font-size: 1rem;
   width: 20vw;
   height: 1.5rem;
-
 }
 
-.hero{
+.hero {
   position: absolute;
   right: 2rem;
   top: 10rem;
@@ -113,106 +110,92 @@ h1{
   width: 30vw;
   height: 30vh;
 }
-.title{
+.title {
   font-style: oblique;
 }
 
-.signout{
+.signout {
   position: absolute;
   right: 10vw;
   top: 1rem;
-
 }
 
-.edit-note{
+.edit-note {
   position: fixed;
   right: 4vw;
-  top : 25vh;
+  top: 25vh;
   width: 35vw;
   border: 1px solid white;
   padding-left: 5rem;
   padding-top: 1rem;
   padding-bottom: 2rem;
   text-align: left;
-
 }
 
-.edit-note input{
+.edit-note input {
   width: 25vw;
 }
 
-.edit-note textarea{
-width  : 25vw;
-height : 15vh;
-
-
+.edit-note textarea {
+  width: 25vw;
+  height: 15vh;
 }
 
-.loader{
+.loader {
   font-size: 1.5rem;
 }
-.msg{
+.msg {
   margin-top: 1rem;
 }
 
-@media screen and (max-width: 1000px){
-.hero{
-  display: none;
-}
+@media screen and (max-width: 1000px) {
+  .hero {
+    display: none;
+  }
 
+  .login-form input {
+    font-size: 1rem;
+    width: 70vw;
+    height: 1.5rem;
+  }
 
-.login-form input{
-  font-size: 1rem;
-  width: 70vw;
-  height: 1.5rem;
+  .edit-note {
+    position: fixed;
+    left: 1rem;
+    top: 25vh;
+    width: 80%;
+    border: 1px solid white;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    text-align: center;
+    background-color: #242424;
+  }
+  .edit-note input {
+    width: 90%;
+  }
 
-}
+  .edit-note textarea {
+    width: 90%;
+    height: 15vh;
+  }
+  .note {
+    position: relative;
+    top: 5rem;
+    border: 1px solid yellow;
+    padding: 1rem;
+    width: 80vw;
+  }
 
-.edit-note{
-  position: fixed;
-  left: 1rem;
-  top : 25vh;
-  width: 80%;
-  border: 1px solid white;
-  padding-left: 2rem;
-  padding-right: 2rem;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  text-align: center;
-  background-color: #242424;
+  .new input {
+    width: 75vw;
+    margin-left: 1rem;
+  }
 
-
-}
-.edit-note input{
-  width: 90%;
-}
-
-.edit-note textarea{
-width  : 90%;
-height : 15vh;
-
-
-}
-.note{
-  position: relative;
-  top:5rem;
-  border: 1px solid yellow;
-  padding: 1rem;
-  width: 80vw;
-
-
-}
-
-.new input{
-  width: 75vw;
-  margin-left: 1rem;
-}
-
-.new textarea{
-  width: 60vh;
-  height: 60vw;
-  margin-left: 1rem;
-}
-
-
+  .new textarea {
+    width: 60vh;
+    height: 60vw;
+    margin-left: 1rem;
+  }
 }
